Update libraries